--- a/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj
+++ b/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj
@@ -115,7 +115,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="basicEncrypt.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="basicEncrypt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
