--- a/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj
+++ b/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj
@@ -116,10 +116,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="basicEncrypt.cpp" />
+    <ClCompile Include="encrypt.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basicEncrypt.h" />
+    <ClInclude Include="encrypt.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
