--- a/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj.filters
+++ b/TP4/ProjectTp4/ProjectTp4/ProjectTp4.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="encrypt.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="vigenere.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basicEncrypt.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="encrypt.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="vigenere.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
