--- a/TP4/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
+++ b/TP4/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="vigenere.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="caesar.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basicEncrypt.h">
@@ -36,6 +39,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="vigenere.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="caesar.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
