--- a/TP4/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
+++ b/TP4/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="caesar.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="caesar2.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="basicEncrypt.h">
@@ -42,6 +45,9 @@
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="caesar.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="caesar2.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
