--- a/TP5/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj
+++ b/TP5/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj
@@ -139,10 +139,12 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="encrypt.cpp" />
+    <ClCompile Include="enigma.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="encrypt.h" />
+    <ClInclude Include="enigma.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
