--- a/TP5/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
+++ b/TP5/ProjetVisual2019/ProjetVisual2019/ProjetVisual2019.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="encrypt.cpp">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="enigma.cpp">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="encrypt.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="enigma.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
